@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.5.6</version>
+    <version>2.7.3</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -69,7 +69,7 @@
     <dependency>
       <groupId>com.sendgrid</groupId>
       <artifactId>sendgrid-java</artifactId>
-      <version>4.4.1</version>
+      <version>4.9.3</version>
     </dependency>
 
     <!-- T E S T -->
@@ -95,11 +95,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>12</source>
-          <target>12</target>
-          <compilerArgs>--enable-preview</compilerArgs>
-        </configuration>
       </plugin>
     </plugins>
   </build>
